toy-c-compiler-master/src/test/resources/errors/void_used_in_initializer.tc
void f() {
    return;
}

int main() {
    int x = f();
    return x;
}
